Changed theme colors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             body {
                 background-color: #573d1c;
                 font-family: 'Gotu', sans-serif;
-                color: rgb(27, 151, 223);
+                color: #E0F2E9;
                 overflow: hidden;
             }
             h1 {
