Changed theme color

--- a/typingGame.html
+++ b/typingGame.html
@@ -70,7 +70,7 @@
                 height: 40%;
                 margin-top: -22%;
                 text-align: center;
-                color: rgb(27, 151, 223);
+                color: #E0F2E9;
             }
             #livesDisp {
                 width: 100%;
@@ -87,7 +87,7 @@
                 float: right;
                 margin-top: -14%;
                 font-size: 90px;
-                color: rgb(27, 151, 223);
+                color: #E0F2E9;
             }
             #popupsDiv {
                 width: 100%;
@@ -383,7 +383,7 @@
                     
                     //highlight correct letter
                     document.getElementsByTagName("input")[randNum].style.border = "solid"; 
-                    document.getElementsByTagName("input")[randNum].style.borderColor = "rgb(27, 151, 223)"; 
+                    document.getElementsByTagName("input")[randNum].style.borderColor = "#E0F2E9"; 
                 }
                 
             }
