Changed theme color

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 float: left;
                 padding-left: 10px;
                 border-right: solid;
-                border-color: rgb(27, 151, 223);
+                border-color: #E0F2E9;
             }
             #containerRight {
                 width: 48%;
