Changed theme color

--- a/typingGame.html
+++ b/typingGame.html
@@ -383,7 +383,7 @@
                     
                     //highlight correct letter
                     document.getElementsByTagName("input")[randNum].style.border = "solid"; 
-                    document.getElementsByTagName("input")[randNum].style.borderColor = "#E0F2E9"; 
+                    document.getElementsByTagName("input")[randNum].style.borderColor = "rgb(27, 151, 223)"; 
                 }
                 
             }
